Fixed arrow alignment

--- a/creative-portfolio/css/styles.css
+++ b/creative-portfolio/css/styles.css
@@ -38,10 +38,6 @@ body {
     background-color: rgba(0, 0, 0, 0.577);
 }
 
-#portfolio-carousel {
-    height: 215px;
-}
-
 .text {
     color: white;
     font-size: 20px;
